--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>GİT ASOSLARİ</title>
 </head>
 <body>
+  <h1>MIXnews</h1>
+  <p>turli manbalardan tanlangan muhim xabarlar</p>
 
 </body>
 </html>
